--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost:6433;Database=postdb;Username=admin;Password=admin"
+    "DefaultConnection": "Host=postgres_post_service;Port=5432;Database=postdb;Username=admin;Password=admin"
   },
 
   "Jwt": {
